samples/_failures_safe/1761393612_5133f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f152e3a5.c: In function ‘main’:
./samples/SAFE/__tmp_f152e3a5.c:143:11: error: ‘strc’ undeclared (first use in this function); did you mean ‘strchr’?
  143 |     input[strc
      |           ^~~~
      |           strchr
./samples/SAFE/__tmp_f152e3a5.c:143:11: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f152e3a5.c:143:15: error: expected ‘]’ at end of input
  143 |     input[strc
      |               ^
      |               ]
./samples/SAFE/__tmp_f152e3a5.c:143:5: error: expected declaration or statement at end of input
  143 |     input[strc
      |     ^~~~~
